<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <!-- Background image -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/activity_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Overlay -->
    <View
        android:id="@+id/backgroundOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/overlay_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Application title -->
    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/app_name"
        android:textColor="@color/title_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Activity title -->
    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_title"
        android:textColor="@color/title_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitle" />

    <!-- Scrollable login form -->
    <ScrollView
        android:id="@+id/formWrapper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintTop_toBottomOf="@id/activityTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <!-- Email input -->
            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_input_field"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/input_hint_color"
                android:textSize="14sp" />

            <!-- Email input -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_input_field"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/input_hint_color"
                android:textSize="14sp" />

            <!-- Currency selector -->
            <Spinner
                android:id="@+id/spHomeCurrency"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_input_field"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:spinnerMode="dropdown" />

            <!-- Password input -->
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_input_field"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/input_hint_color"
                android:textSize="14sp" />

            <!-- Password input -->
            <EditText
                android:id="@+id/etRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_input_field"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/input_hint_color"
                android:textSize="14sp" />

            <!-- Login button -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@null"
                app:backgroundTint="@null"
                android:text="@string/register_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <!-- Error message -->
            <TextView
                android:id="@+id/tvErrorWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:visibility="gone" />

            <!-- Register link -->

            <TextView
                android:id="@+id/tvLoginLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/login_link"
                android:textColor="@color/link_color"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>